Fixed buttonArea alignment

--- a/themes/shared/assets/sass/global.scss
+++ b/themes/shared/assets/sass/global.scss
@@ -132,3 +132,7 @@ a.disabled {
 .inactive {
     opacity: 0.4;
 }
+
+.hidden {
+    display: none;
+}
